src/objects/Apttus_Config2__ClassificationHierarchy__c.object
<CustomObject>
    <description>Represents a category hierarchy</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AncestorId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ancestor category</description>
        <label>Ancestor</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Children</relationshipLabel>
        <relationshipName>Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultSearchCategory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the parent category is in context the page should show content from this category by default.</description>
        <label>Default Search Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>Stores description of the category node.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpandedByDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the category will be expanded to one level by default.</description>
        <inlineHelpText>When checked this category will be expanded to one level by default. The parent category should also be marked as expanded by default.</inlineHelpText>
        <label>Expanded By Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GuidePage__c</fullName>
        <description>The name of the guide page to use for Help me Choose</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Guide Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideAllSearchFilters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to disable search filters for the category.</description>
        <inlineHelpText>Disables search filters for the category</inlineHelpText>
        <label>Hide All Search Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HierarchyId__c</fullName>
        <description>ID of the category hierarchy</description>
        <label>Hierarchy</label>
        <referenceTo>Apttus_Config2__ClassificationName__c</referenceTo>
        <relationshipLabel>Category Hierarchies</relationshipLabel>
        <relationshipName>CategoryHierarchies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IconId__c</fullName>
        <description>Holds information about the image icon attached to this Category Hierarchy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Icon Image</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludeInTotalsView__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the category is included in the totals view. Only applicable to offerings.</description>
        <label>Include In Totals View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the category is hidden in the tab or carousal.</description>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsLeaf__c</fullName>
        <description>Indicates whether the category is a leaf category</description>
        <formula>IF( (Apttus_Config2__Right__c = (Apttus_Config2__Left__c + 1)), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the category is a leaf category</inlineHelpText>
        <label>Is Leaf</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsPicklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to display the options as pick list values.</description>
        <inlineHelpText>When checked the options within this option group will be displayed as picklist values</inlineHelpText>
        <label>Is Picklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Label__c</fullName>
        <description>The label for the category</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LargeIconId__c</fullName>
        <description>Stores Id of the attachment object representing a large icon for the category hierarchy node.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Stores Id of the attachment object representing a large icon for the category hierarchy node.</inlineHelpText>
        <label>Large Icon Image</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LargeImageSize__c</fullName>
        <description>This will hold the size of the large image. width x height</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This will hold the size of the large image. width x height</inlineHelpText>
        <label>Large Image Size</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Left__c</fullName>
        <description>The left visitation sequence</description>
        <label>Left</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Level__c</fullName>
        <description>The level in the hierarchy</description>
        <label>Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LongDescription__c</fullName>
        <description>Long description can store rich text for enhanced display of description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Long Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxOptions__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The maximum number of options that may be selected from the group. The number can be zero. This is not applicable to offerings.</description>
        <label>Max Options</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinOptions__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The minimum number of options that must be selected from the group. The number can be zero. This is not applicable to offerings.</description>
        <label>Min Options</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Modifiable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the option group or its components are modifiable during selection.  This is not applicable to offerings.</description>
        <label>Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PrimordialId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the primordial category</description>
        <label>Primordial</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Descendants</relationshipLabel>
        <relationshipName>Descendants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductAttributeGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the attribute group associated with the category</description>
        <inlineHelpText>ID of the attribute group associated with the category</inlineHelpText>
        <label>Product Attribute Group</label>
        <referenceTo>Apttus_Config2__ProductAttributeGroup__c</referenceTo>
        <relationshipLabel>Category Hierarchies</relationshipLabel>
        <relationshipName>CategoryHierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCount__c</fullName>
        <description>The number of products associated with the classification</description>
        <label>Product Count</label>
        <summaryForeignKey>Apttus_Config2__ProductClassification__c.Apttus_Config2__ClassificationId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Right__c</fullName>
        <description>The right visitation sequence</description>
        <label>Right</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SearchFilterFields__c</fullName>
        <description>List of product fields of Checkbox or Picklist type that can be used for refining search results.</description>
        <inlineHelpText>List of product fields of Checkbox or Picklist type that can be used for refining search results.</inlineHelpText>
        <label>Search Filter Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>NokiaCPQ_Category__c</fullName>
                </value>
                <value>
                    <fullName>NokiaCPQ_Sub_Category__c</fullName>
                </value>
                <value>
                    <fullName>NokiaCPQ_Item_Type__c</fullName>
                </value>
                <value>
                    <fullName>Nokia_CPQ_Marketing_Status__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_CPQ__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Portfolio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Category Hierarchy</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>Apttus_Config2__Label__c</columns>
        <columns>NAME</columns>
        <columns>Apttus_Config2__ProductCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>